Update5:新的文件添加

--- a/html_page/register.html
+++ b/html_page/register.html
@@ -18,9 +18,11 @@
             <br/>
             <input style="margin-bottom: 15px;" id="telnumber" type="Tel" name="telnumber[]" placeholder="请输入电话号码(选填)" >
             <br/>
-            <input style="margin-bottom: 15px;" id="disable" placeholder="此项为时间，无需填写" disabled required>
+            <input style="margin-bottom: 15px;" id="disable" placeholder="此项为时间，无需填写" readonly required>
             <br/>
-            <button style="background: linear-gradient(#FA8BFF,#2BD2FF);margin-top: 10px; margin-bottom: 10px; border-radius: 15px; font-family: ziti; font-size: 20px; box-shadow: 3px 6px 3px;" type="submit">提交注册</button>
+            <div align="left">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button style="background: linear-gradient(#FA8BFF,#2BD2FF);margin-top: 10px; margin-bottom: 10px; border-radius: 15px; font-family: ziti; font-size: 20px; box-shadow: 3px 6px 3px;" type="submit">提交注册</button>
+            </div>
     </form>
     </div>
 </body>
