--- a/html_page/page.html
+++ b/html_page/page.html
@@ -5,13 +5,14 @@
 <title>page1</title>
 <link href="../css/page.css" rel="stylesheet" >
 </head>
-<body class="bfcl">
-	<div>
+<body>
+	<div class="a">
 	<h3><a href="page4.html" target="_parent">查看站长主页</a></h3>
 	<h3><a href="page2.html" target="_parent">白嫖游戏</a></h3>
 	<h3><a href="ftp://192.168.0.107:21" target="_blank">进入ftp服务器</a></h3>
 	<h3><a href="page5.html" target="_parent">音乐页</a></h3>
 	<h3><a href="register.html" target="_parent">注册页</a></h3>
+	<h3><a href="https://github.com/rockeven199/HTML5" target="_blank">访问我的github主页</a></h3>
 	</div>
 </body>
 </html>
