第不知道第几次更新
对page页面进行重新设计

--- a/html_page/page.html
+++ b/html_page/page.html
@@ -1,18 +1,33 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+	PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0.minimum-scale=1.0,user-scalable=no" charset="utf-8"/>
-<title>page1</title>
-<link href="../css/page.css" rel="stylesheet" >
+	<meta name="viewport"
+		content="width=device-width,initial-scale=1.0,maximum-scale=1.0.minimum-scale=1.0,user-scalable=no"
+		charset="utf-8" />
+	<title>page1</title>
+	<link href="../css/page.css" rel="stylesheet">
 </head>
+
 <body>
-	<div class="a">
-	<h3><a href="page4.html" target="_parent">查看站长主页</a></h3>
-	<h3><a href="page2.html" target="_parent">白嫖游戏</a></h3>
-	<h3><a href="ftp://192.168.0.107:21" target="_blank">进入ftp服务器</a></h3>
-	<h3><a href="page5.html" target="_parent">音乐页</a></h3>
-	<h3><a href="register.html" target="_parent">注册页</a></h3>
-	<h3><a href="https://github.com/rockeven199/HTML5" target="_blank">访问我的github主页</a></h3>
+	<div align="center" class="touxiang">
+		<img src=" /images/hua ji tou.jpg">
+	</div>
+
+	<!--导航链接-->
+	<div align="center" class="nav">
+		<div style="border: 1px solid #000000;width: 16.6%;border-radius: 6px;">
+			<nav>
+				<a href="page4.html" target="_parent">查看站长主页</a>
+				<a href="page2.html" target="_parent">白嫖游戏</a>
+				<a href="ftp://192.168.0.107:21" target="_blank">进入FTP服务器</a>
+				<a href="page5.html" target="_parent">音乐页</a>
+				<a href="register.html" target="_parent">注册页</a>
+				<a href="https://github.com/rockeven199/HTML5" target="_blank">访问我的Github主页</a>
+			</nav>
+		</div>
 	</div>
 </body>
+
 </html>
